--- a/xamarin/pitfalls-and-issues.html
+++ b/xamarin/pitfalls-and-issues.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/pitfalls-and-issues.html" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"headline":"Scanbot SDK for Xamarin","url":"https://scanbotsdk.github.io/documentation/xamarin/pitfalls-and-issues.html","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"https://scanbotsdk.github.io/documentation/xamarin/pitfalls-and-issues.html","headline":"Scanbot SDK for Xamarin","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -41,7 +41,7 @@
     <h3 id="pitfalls-and-issues">Pitfalls and issues</h3>
 
 <blockquote>
-  <p>I’m getting the error: <code class="highlighter-rouge">android.view.InflateException: Binary XML file line #8: Binary XML file line #8: Error inflating class net.doo.snap.camera.ScanbotCameraView</code></p>
+  <p>I am getting the following error: <code class="highlighter-rouge">android.view.InflateException: Binary XML file line #8: Binary XML file line #8: Error inflating class net.doo.snap.camera.ScanbotCameraView</code></p>
 </blockquote>
 
 <p>Solution: You have to initialize the Scanbot SDK before you can use any UI components like <code class="highlighter-rouge">ScanbotCameraView</code> or other SDK functions.</p>
@@ -51,27 +51,27 @@
 </blockquote>
 
 <blockquote>
-  <p>I’m getting the error: <code class="highlighter-rouge">A/libc: Fatal signal 6 (SIGABRT), code -6 in tid 6627 ...</code></p>
+  <p>I am getting the following error: <code class="highlighter-rouge">A/libc: Fatal signal 6 (SIGABRT), code -6 in tid 6627 ...</code></p>
 </blockquote>
 
 <p>Solution: Please make sure the package ID (on Android) or bundle ID (on iOS) of your app matches the one of the license key we generated for you.
 If you are testing our example apps with your license key, please adjust the package/bundle ID accordingly.</p>
 
-<p>Please also make sure you have inserted the license key string exact as it is provided in the license file. 
+<p>Please also make sure you have inserted the license key string exactly as it is provided in the license file.
 The line breaks <code class="highlighter-rouge">\n</code> in the license key string are important and may not be removed!</p>
 
 <blockquote>
   <p>My app stopped working.</p>
 </blockquote>
 
-<p>Solution: Either your trial license period is expired or you set the license key incorrectly.</p>
+<p>Solution: Either your trial license period has expired or you set the license key incorrectly.</p>
 
 <blockquote>
   <p>Your example app crashes after some time / after x images.</p>
 </blockquote>
 
-<p>Solution: Our example apps doesn’t contain a Scanbot SDK license key and run in a <strong>trial mode (trial period of 1 minute)</strong>. 
-After the trial period is over the Scanbot SDK functions will stop working. 
+<p>Solution: Our example apps do not contain a Scanbot SDK license key and run in a <strong>trial mode (trial period of 1 minute)</strong>.
+After the trial period has expired, the Scanbot SDK functions will stop working.
 The UI components (like Scanning UI) will stop working or may be terminated. You have to restart the app to get another trial period.</p>
 
   </div>
